Fixed the padding of the images in the faceted search to avoid them overflowing the containing panel under some some browser scaling factors.

--- a/digipal/static/css/dpimage.less
+++ b/digipal/static/css/dpimage.less
@@ -1,5 +1,10 @@
 /* browse images */
 
+div.panel.panel-thumb {
+    /* default padding was pushing the image out of the box on teh faceted result */
+    padding: 0;
+}
+
 .image{
     text-align: center;
     padding:1%;
@@ -12,7 +17,7 @@
     display:inline-block;
     max-width: 100%;
     margin: 0.3em;
-    margin-left: 0.5em;
+    /* margin-left: 0.5em; */
     
     .button-bar, .private-image {
         bottom: 1em;
